# Sapphillon_CLI

./: .gitignore  Cargo.toml  Makefile  README.md  deno.json  developers.md  main.ts  main_test.ts  setup.bat  setup.sh
.devcontainer/: devcontainer.json
.github/workflows/: build-examples.yml  ci.yml  release.yml
deno/: deno.json  main_test.ts
deno/src/: version.ts
deno/src/commands/: build_test.ts
deno/src/utils/: args.ts  args_test.ts  bundler.ts  path.ts  path_test.ts
deno/src/utils/parsers/: jsdoc_test.ts  toml_test.ts
docs/: package-specification.md
examples/date-formatter-plugin/: package.js  package.toml
examples/date-formatter-plugin/src/: index.ts
examples/javascript-plugin/: package.js  package.toml
examples/javascript-plugin/src/: index.js
examples/text-utils-plugin/: package.js  package.toml
examples/text-utils-plugin/src/: analyzer.js  caseConverter.js  formatter.js  index.js
examples/typescript-plugin/: package.js  package.toml
examples/typescript-plugin/src/: index.ts
examples/weather-forecast-plugin/: package.js  package.toml
examples/weather-forecast-plugin/src/: api.ts  formatter.ts  index.ts
src/: main.rs  version.ts
src/commands/: build.rs  build.ts  build_test.ts  greet.ts  greet_test.ts  init.rs  init.ts  init_test.ts
src/utils/: args.ts  bundler.rs  bundler.ts  mod.rs  path.ts  path_test.ts
src/utils/parsers/: jsdoc.rs  jsdoc.ts  jsdoc_test.ts  mod.rs  toml.rs  toml.ts  toml_test.ts
tests/: cli_tests.rs
