[package]
name = "sapphillon"
version = "0.1.0"
edition = "2021"
description = "A command-line tool for creating and building Sapphillon plugin packages."

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
regex = "1.10"
anyhow = "1.0"
fs_extra = "1.3"
walkdir = "2.5"
tokio = { version = "1.37", features = ["full"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
